# FilkaBrowser

./: .gitignore  CMakeLists.txt  README.md  debug-page-translation-bug.md  filka.bat
.github/workflows/: build-release.yml  build-windows.yml
Browser_Development_Skills/: INDEX.md  ROADMAP.md  SKILL_MATRIX.md  TOOLCHAIN.md
Browser_Development_Skills/codex-skills/browser-build-release/: SKILL.md
Browser_Development_Skills/codex-skills/browser-security-privacy/: SKILL.md
Browser_Development_Skills/codex-skills/browser-testing-debugging/: SKILL.md
Browser_Development_Skills/codex-skills/qml-browser-ui/: SKILL.md
Browser_Development_Skills/codex-skills/qt-cpp-browser-backend/: SKILL.md
Browser_Development_Skills/codex-skills/qt-webengine-browser-core/: SKILL.md
Browser_Development_Skills/knowledge-sources/: COMMUNITY_SKILLS_AND_RULES.md  OFFICIAL_DOCS.md
Browser_Development_Skills/rules/: AGENTS.md  AI_AGENT_RULES.md  CLAUDE.md  CLINE_ROO_RULES.md  CURSOR_RULES.md
Browser_Development_Skills/templates/: BROWSER_AGENT_SYSTEM_PROMPT.md
app/: CMakeLists.txt  filka.rc  filka.rc.in
app/assets/filters/: filka-default.txt
app/qml/: BrowserWindow.qml  Main.qml  WelcomeDialog.qml
app/qml/browser/: BookmarksBar.qml  BrowserShortcuts.qml  BrowserView.qml  CommandPalette.qml  DownloadPrompt.qml  FindBar.qml  ImportDialog.qml  ListCard.qml  MediaControlsPopover.qml  NavigationBar.qml  PanelHost.qml  PermissionBar.qml  PictureInPictureWindow.qml  PremiumSidebar.qml  ScreenshotOverlay.qml  ScreenshotPrompt.qml  ShellState.qml  SiteInfoPopup.qml  StartPage.qml  TabContextMenu.qml  TabItem.qml  TabPanel.qml  TabSearchOverlay.qml  TabStrip.qml  WallpaperBackdrop.qml  WebContextMenu.qml  WebPane.qml
app/qml/components/: AccentSwatch.qml  AddressBar.qml  Chip.qml  ConfirmActionButton.qml  Favicon.qml  FilkaScrollBar.qml  GlassButton.qml  GlassPanel.qml  Icon.qml  IconButton.qml  OmniboxHelper.js  OmniboxSuggestionsPopup.qml  Pill.qml  SectionLabel.qml  SidePanel.qml  ToggleSwitch.qml  UndoToast.qml  UpdateBanner.qml  WindowChrome.qml  WindowControls.qml
app/qml/panels/: BookmarksPanel.qml  DownloadsPanel.qml  HistoryPanel.qml  SettingsPanel.qml  TranslatorPanel.qml  TranslatorPopover.qml
app/qml/theme/: Motion.qml  Theme.qml
app/qml/workspace/: WorkspaceSwitcher.qml
app/rust/adblock_ffi/: Cargo.toml
app/rust/adblock_ffi/src/: lib.rs
app/src/: main.cpp
app/src/adblock/: AdBlockFfi.h  AdBlockInterceptor.cpp  AdBlockInterceptor.h  AdBlockManager.cpp  AdBlockManager.h
app/src/browser/: TabModel.cpp  TabModel.h
app/src/data/: AppSettings.cpp  AppSettings.h  BookmarkModel.cpp  BookmarkModel.h  BrowsingData.cpp  BrowsingData.h  DownloadModel.cpp  DownloadModel.h  HistoryModel.cpp  HistoryModel.h  PageTranslator.cpp  PageTranslator.h  QuickLinkModel.cpp  QuickLinkModel.h  SiteDataHelper.cpp  SiteDataHelper.h
app/src/import/: BrowserImporter.cpp  BrowserImporter.h
app/src/media/: ScreenshotHelper.cpp  ScreenshotHelper.h
app/src/update/: UpdateChecker.cpp  UpdateChecker.h
app/src/workspace/: WorkspaceModel.cpp  WorkspaceModel.h
app/tests/: test_tabmodel.cpp
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  PLAN_MISSING_FEATURES.md  PLAN_UI_LAYOUT.md  PROMPT_TRANSLATOR.md
